--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -212,7 +212,7 @@ pre {
 
 
 /** Fonts on persistent elements **/
-h2, .contentnav li a, h5, h3, .filter-group li, h6, .mobilemenu li a{
+h2, .contentnav li a, h5, h3, .filter-group li, h6, h7, .mobilemenu li a{
     font-family: $bold-font-family;
 }
 
