Index styling complete. Closes the-engine-room/responsible-data-handbook#27

--- a/_includes/slidegrid.html
+++ b/_includes/slidegrid.html
@@ -63,7 +63,7 @@
 			<div class="col-sm-3 col-md-2 chapter grid-item">
 
 				  
-				  <a href="{{ "/assets/pdf/" | prepend: site.baseurl }}{{ p.asset-link }}.pdf" target="_blank">
+				  <a href="{{ "/assets/slides/" | prepend: site.baseurl }}{{ p.asset-link }}.pdf" target="_blank">
 				  <img class="img" title="{{ p.title }}" src="{{ "/assets/img/chapter-" | prepend: site.baseurl }}{{ p.num }}.png"/>
 				  <h6 class="download">download</h6></a>
 
