--- a/_includes/browsechapters.html
+++ b/_includes/browsechapters.html
@@ -1,21 +1,23 @@
 
 <div class="browsech">
 	<div class="row">
-		<div class="col-md-12">
-			<div class="row">
-				<div class="col-md-11">
-					<h5 class="browse">Browse Other Chapters</h5>
-				</div>
-				<div class="col-md-1"></div>
-			</div>
+		<div class="col-xs-1"></div>
+
+		<div class="col-xs-10">
+	
+			<h5 class="browse">Browse Other Chapters</h5>
 		</div>
+		
+		<div class="col-xs-1"></div>
+
 	</div>
 
 	<div class="row">
-		
-		<div class="col-md-12">
 
-					<!-- I don't get why this is part of the design? <img class="bar" src="{{ "/assets/img/bold-line.png" | prepend: site.baseurl}}" /> -->
+		<div class="col-xs-1"></div>
+		
+		<div class="col-xs-10">
+
 					{% assign posts = site.posts | sort: "num" %}
 					{% for post in posts %}
 						{% if post.title != page.title %}
@@ -67,6 +69,8 @@
 					{% endfor %}
 
 			</div>
+
+			<div class="col-xs-1"></div>
 
 		</div>
 
