--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -351,8 +351,8 @@
     }
 
     p{
-        padding: 0 0 30px 30px ;
-        width: 70%;
+        padding: 0 10px 30px 30px ;
+        width: 80%;
         float: left;
     }
 
@@ -378,7 +378,7 @@
  * Page content
  */
 .page-content {
-    padding: $spacing-unit 0;
+    padding: $spacing-unit 0 0 0;
 }
 
 .page-heading {
@@ -656,7 +656,7 @@
         margin: 0 10px 20px 10px;
         padding: 10px 0 10px 0;
         text-transform: uppercase;
-        border-bottom: 3px solid $red-color;
+        border-bottom: 4px solid $red-color;
         font-size: 28px;
     }
 
@@ -674,8 +674,8 @@
 
         .chcurrent{
             position: absolute;
-            bottom: 50px;
-            left: 25px;
+            bottom: 35px;
+            left: 15px;
             background: rgba(250,250,250,0.8);
             border-radius: 50px;
             //border: 1px solid $red-color;
@@ -703,8 +703,8 @@
         .ch{
             position: absolute;
             border-radius: 50px;
-            bottom: 50px;
-            left: 45px;
+            bottom: 35px;
+            left: 35px;
             font-family: $fancy-font-family;
             color: $red-color;
             line-height: 0.8em;
@@ -721,28 +721,27 @@
 
         h4.zerosmall{
             padding-top: 20px;
+            left: 25px;
         }
 
         h5.zerosmall{
-            left: 30px;
-            padding-bottom: 10px;
+            left: 35px;
+            bottom: 50px;
+
             img{
                 width: 30px;
+                margin-bottom: 30px;
             }
         }
 
         img.chapterthumb, .thumb img{
-            max-width: 160px;
+            max-width: 140px;
             padding: 10px;
         }
 
     }
 
-    .bar{
-        width: 20px;
-        height: 170px;
-        margin: 0 0 0 10px;
-    }
+
 
     @include media-query($on-palm) {
 
