--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -579,13 +579,13 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .site-footer .col-xs-10 { border-top: 20px solid black; }
 .site-footer .col-xs-10 .col-md-6 { margin: 20px 0 0 0; padding: 20px 0 0 0; }
 .site-footer img { width: 20%; float: left; }
-.site-footer p { padding: 0 0 30px 30px; width: 70%; float: left; }
+.site-footer p { padding: 0 10px 30px 30px; width: 80%; float: left; }
 .site-footer a { color: #cd1619; }
 .site-footer a:hover { text-decoration: none; color: #cd1619; }
 @media screen and (max-width: 600px) { .site-footer p { font-size: 16px; } }
 
 /** Page content */
-.page-content { padding: 30px 0; }
+.page-content { padding: 30px 0 0 0; }
 
 .page-heading { font-size: 20px; }
 
@@ -635,20 +635,19 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 
 /** Browse Chapters at bottom of posts
 **/
-.browsech h5.browse { margin: 0 10px 20px 10px; padding: 10px 0 10px 0; text-transform: uppercase; border-bottom: 3px solid #cd1619; font-size: 28px; }
+.browsech h5.browse { margin: 0 10px 20px 10px; padding: 10px 0 10px 0; text-transform: uppercase; border-bottom: 4px solid #cd1619; font-size: 28px; }
 .browsech .col-md-12 { margin-left: 40px; }
 .browsech .eachch { float: left; position: relative; }
 .browsech .eachch a.browselink:hover { text-decoration: none; }
-.browsech .eachch .chcurrent { position: absolute; bottom: 50px; left: 25px; background: rgba(250, 250, 250, 0.8); border-radius: 50px; color: #cd1619; text-align: center; }
+.browsech .eachch .chcurrent { position: absolute; bottom: 35px; left: 15px; background: rgba(250, 250, 250, 0.8); border-radius: 50px; color: #cd1619; text-align: center; }
 .browsech .eachch .chcurrent h5 { font-size: 30px; padding: 20px 0 0 0; margin: 0; font-family: "trattatelloregular", Georgia, Times, serif; }
 .browsech .eachch .chcurrent h4 { font-size: 20px; padding: 0 10px 10px 10px; font-family: "trattatelloregular", Georgia, Times, serif; }
-.browsech .eachch .ch { position: absolute; border-radius: 50px; bottom: 50px; left: 45px; font-family: "trattatelloregular", Georgia, Times, serif; color: #cd1619; line-height: 0.8em; font-size: 50px; background: rgba(250, 250, 250, 0.8); padding: 40px 20px 20px 20px; }
+.browsech .eachch .ch { position: absolute; border-radius: 50px; bottom: 35px; left: 35px; font-family: "trattatelloregular", Georgia, Times, serif; color: #cd1619; line-height: 0.8em; font-size: 50px; background: rgba(250, 250, 250, 0.8); padding: 40px 20px 20px 20px; }
 .browsech .eachch .ch img { width: 50px; }
-.browsech .eachch h4.zerosmall { padding-top: 20px; }
-.browsech .eachch h5.zerosmall { left: 30px; padding-bottom: 10px; }
-.browsech .eachch h5.zerosmall img { width: 30px; }
-.browsech .eachch img.chapterthumb, .browsech .eachch .thumb img { max-width: 160px; padding: 10px; }
-.browsech .bar { width: 20px; height: 170px; margin: 0 0 0 10px; }
+.browsech .eachch h4.zerosmall { padding-top: 20px; left: 25px; }
+.browsech .eachch h5.zerosmall { left: 35px; bottom: 50px; }
+.browsech .eachch h5.zerosmall img { width: 30px; margin-bottom: 30px; }
+.browsech .eachch img.chapterthumb, .browsech .eachch .thumb img { max-width: 140px; padding: 10px; }
 @media screen and (max-width: 600px) { .browsech h5.browse { font-size: 20px; } }
 
 /**
