Placed map for the-engine-room/responsible-data-handbook#24

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,15 @@ layout: default
    {% if page.subtitle %}
    	<h3>{{ page.subtitle }}</h3>
    {% endif %}
+    
+
+      <div class="curlholder">
+           <img class="curls" src="{{ "/assets/img/curls-1.png" | prepend: site.baseurl }}" />
+      </div>
+
+     <div class="map">
+    <img src="{{ "/assets/img/map.png" | prepend: site.baseurl }}" />
+    </div>
 
   <div class="mobilemenu">
     <ul>
@@ -36,11 +45,10 @@ layout: default
 
   </div>
 
-  <div class="curlholder">
-       <img class="curls" src="{{ "/assets/img/curls-1.png" | prepend: site.baseurl }}" />
-  </div>
+
 
   </header>
+
 
 
 
