--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -378,7 +378,7 @@
  * Page content
  */
 .page-content {
-    padding: $spacing-unit 0 0 0;
+    padding: $spacing-unit 0;
 }
 
 .page-heading {
@@ -469,7 +469,7 @@
     }
 
     .map{
-        padding: 30px 0 50px 0;
+        padding: 30px 0;
         width:90%;
         margin: 0 auto;
     }
@@ -692,29 +692,10 @@
 
         .chcurrent{
             position: absolute;
-            bottom: 35px;
-            left: 15px;
-            background: rgba(250,250,250,0.8);
-            border-radius: 50px;
-            //border: 1px solid $red-color;
-            color: $red-color;
-            text-align: center;
+            bottom: -40px;
+            left: -10px;
+            z-index: 1000;
 
-            h5{
-                font-size: 30px;
-                padding: 20px 0 0 0;
-                margin: 0;
-                font-family: $fancy-font-family;
-
-
-            }
-
-            h4{
-                font-size: 20px;
-                padding: 0 10px 10px 10px;
-                font-family: $fancy-font-family;
-
-            }
 
         }
 
