--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,10 +7,10 @@ layout: default
   	<div class="numwrapper">
       {% if page.ch == 0 %}
 
-         <div class="chnum zerobig"><img src="{{ "/assets/img/special-zero.png" | prepend: site.baseurl }}" /></div>
+         <div class="chnum"><img src="{{ "/assets/img/special-zero.png" | prepend: site.baseurl }}" /></div>
 
       {% else %}
-        <div class="chnum">{{ page.ch }}</div>
+        <div class="chnum text">{{ page.ch }}</div>
       {% endif %}
       <img class="numholder" src="{{ "/assets/img/elem-1.png" | prepend: site.baseurl }}" />
     </div>
