Updated front ccover and full handbook pdf added

--- a/_includes/slidegrid.html
+++ b/_includes/slidegrid.html
@@ -8,10 +8,10 @@
 		<div class="col-sm-3 col-md-2 chapter grid-item">
 				 <a href="{{ "/assets/slides/fullslides.pdf" | prepend: site.baseurl }}" target="_blank">
 
-				 <img class="img" title="Full Slide Deck" src="{{ "/assets/img/chapter-0.png" | prepend: site.baseurl }}"/>
+				 <img class="img" title="Full Slide Deck" src="{{ "/assets/img/handbook-front.jpg" | prepend: site.baseurl }}"/>
 					
 
-				<h6 class="download">download</h6></a>
+				<h6 class="download">download all slides</h6></a>
 
          	</div>
 
