--- a/_includes/sidemenu.html
+++ b/_includes/sidemenu.html
@@ -6,10 +6,10 @@
 		</div>
 
 
-		<div class="index">
+		<!--<div class="index">
 			<a href="{{ "/" | prepend: site.baseurl }}"><h5>Back to INDEX</h5></a>
 
-		</div>
+		</div>-->
  
 
 		<div class="download">
