--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,6 +34,7 @@ $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        850px;
+$md-col-break: 	   990px;
 $on-large-laptop:  1200px;
 
 // Use media queries like this:
