--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -814,22 +814,24 @@
 
 .sliderow, .handbookrow{
         color: $black-color;
-        padding: 20px 0 ;
+        padding: 100px 0 0 0 ;
             h2.resource{
                 font-size: 30px;
                 padding: 0 0 10px 10px;
+                letter-spacing: 0.07em;
                 border-bottom: 4px solid $red-color;
             }
             a{ 
                 color: $black-color;
-                font-size: 30px;
                 padding: 0;
 
                 h6{
                     text-align: center;
                     padding: 0;
-                    line-height: 1em;
-                    font-size: 30px;
+                    margin: 0;
+                    line-height: 1.2em;
+                    letter-spacing: 0.07em;
+                    font-size: 20px;
                     vertical-align: middle;
 
                 }
@@ -841,7 +843,7 @@
             }
             .button{
                 padding: 20px;
-                min-height: 150px;
+                min-height: 100px;
                 border: 4px solid $red-color;
 
             }
@@ -849,18 +851,23 @@
 
 
     @include media-query($md-col-break){
+        padding: 50px 0 0 0;
         .button{
-            padding: 30px;
+            padding: 20px;
             min-height: auto;
             margin: 20px 0;
+
+        }
+
+        .sliderow h6{
+            font-size: 18px;
         }
     }
     @include media-query($on-laptop) {
-        h2.resource, .sliderow h6{
+        h2.resource{
             font-size: 25px;
         }
 
- 
 
         
 
@@ -868,12 +875,9 @@
 
 
     @include media-query($on-palm) {
+        padding: 30px 0 0 0;
  
-        h2.resource, .sliderow h6{
-            font-size: 22px;
-        }
 
-        
 
 
     }
