--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -811,10 +811,15 @@
 
 
 /* index button row */
+.sliderow{
+    padding: 50px 0 0 0;
+}
+.handbookrow{
+    padding: 100px 0 0 0;
+}
 
 .sliderow, .handbookrow{
         color: $black-color;
-        padding: 100px 0 0 0 ;
             h2.resource{
                 font-size: 30px;
                 padding: 0 0 10px 10px;
@@ -822,17 +827,18 @@
                 border-bottom: 4px solid $red-color;
             }
             a{ 
-                color: $black-color;
                 padding: 0;
 
                 h6{
                     text-align: center;
                     padding: 0;
                     margin: 0;
+                    color: $red-color;
                     line-height: 1.2em;
                     letter-spacing: 0.07em;
                     font-size: 20px;
                     vertical-align: middle;
+                    text-transform:uppercase;
 
                 }
             
@@ -845,6 +851,7 @@
                 padding: 20px;
                 min-height: 100px;
                 border: 4px solid $red-color;
+
 
             }
             
