--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -667,10 +667,14 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .fullbook p strong { font-family: "gentium_basicbold", Helvetica, Arial, sans-serif; font-variant: small-caps; color: #1B1E1F; font-weight: bolder; }
 
 /* index button row */
-.sliderow, .handbookrow { color: #1B1E1F; padding: 100px 0 0 0; }
+.sliderow { padding: 50px 0 0 0; }
+
+.handbookrow { padding: 100px 0 0 0; }
+
+.sliderow, .handbookrow { color: #1B1E1F; }
 .sliderow h2.resource, .handbookrow h2.resource { font-size: 30px; padding: 0 0 10px 10px; letter-spacing: 0.07em; border-bottom: 4px solid #cd1619; }
-.sliderow a, .handbookrow a { color: #1B1E1F; padding: 0; }
-.sliderow a h6, .handbookrow a h6 { text-align: center; padding: 0; margin: 0; line-height: 1.2em; letter-spacing: 0.07em; font-size: 20px; vertical-align: middle; }
+.sliderow a, .handbookrow a { padding: 0; }
+.sliderow a h6, .handbookrow a h6 { text-align: center; padding: 0; margin: 0; color: #cd1619; line-height: 1.2em; letter-spacing: 0.07em; font-size: 20px; vertical-align: middle; text-transform: uppercase; }
 .sliderow a:hover, .handbookrow a:hover { color: #cd1619; text-decoration: none; }
 .sliderow .button, .handbookrow .button { padding: 20px; min-height: 100px; border: 4px solid #cd1619; }
 @media screen and (max-width: 990px) { .sliderow, .handbookrow { padding: 50px 0 0 0; }
