Slide page menu fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <div class="page-content">
 
       {% if page.title == "Responsible Data Slides" %}
-      <div class="row">
+      <div class="row slidepage">
 
             <div class="col-sm-3">
               <div class="row">
