--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,6 +35,7 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        850px;
 $md-col-break: 	   990px;
+$slide-page-break: 1000px;
 $on-large-laptop:  1200px;
 
 // Use media queries like this:
