Mobile mennu  on chapter pages

--- a/_includes/sidemenu.html
+++ b/_includes/sidemenu.html
@@ -13,10 +13,16 @@
  
 
 		<div class="download">
-			<a href="{{ "/assets/pdf/" | prepend: site.baseurl | append: page.asset-link }}.pdf"><h6>
+			<a href="{{ "/assets/pdf/" | prepend: site.baseurl | append: page.asset-link }}.pdf" target="_blank"><h6>
 				Download Chapter
 			</h6></a>
 		</div>
+		<div class="download">
+			<a href="{{ "/assets/pdf/" | prepend: site.baseurl | append: page.asset-link }}-summary.pdf" target="_blank"><h6>
+				Download Chapter Summary
+			</h6></a>
+		</div>
+
 
 	<div class="contentnav">
 		<ul>
