--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,8 +27,10 @@ layout: default
      <div class="map">
     <img src="{{ "/assets/img/map.png" | prepend: site.baseurl }}" />
     </div>
+ 
+    <span id="smallmenuswitch" class="icon-arrow-down"></span>
 
-  <div class="mobilemenu">
+    <div id="menusmall" class="mobilemenu">
     <ul>
 
     {% assign nav = page.nav %}
