Updated slide landing page, maps at the top of chapters, beginning of markdown conversion

--- a/_includes/sideslides.html
+++ b/_includes/sideslides.html
@@ -6,9 +6,18 @@
 		</div>
 
 
-		<div class="index">
-			<a href="{{ "/" | prepend: site.baseurl }}"><h5>Back to INDEX</h5></a>
+		<div class="download">
+			<a href="{{ "/assets/slides/responsible-data-handbook-slides.pdf" | prepend: site.baseurl }}" target="_blank"><h6>
+				Download All Slides as PDF
+			</h6></a>
 
+		</div>
+
+		<div class="download">
+
+			<a href="{{ "/assets/slides/responsible-data-handbook-slides.pptx" | prepend: site.baseurl }}" target="_blank"><h6>
+				Download All Slides as Powerpoint
+			</h6></a>
 		</div>
 
 
