--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
       </div>
 
      <div class="map">
-    <img src="{{ "/assets/img/map.png" | prepend: site.baseurl }}" />
+    <img src="{{ "/assets/img/" | prepend: site.baseurl  }}{{ page.asset-link }}-map.png" />
     </div>
  
     <span id="smallmenuswitch" class="icon-arrow-down"></span>
