--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1776,10 +1776,10 @@ ul {
 
 /* index button row */
 .sliderow {
-  padding: 50px 0 0 0; }
+  padding: 40px 0 0 0; }
 
 .handbookrow {
-  padding: 100px 0 0 0; }
+  padding: 60px 0 0 0; }
 
 .sliderow, .handbookrow {
   color: #1B1E1F; }
@@ -1809,7 +1809,7 @@ ul {
     border: 4px solid #cd1619; }
   @media screen and (max-width: 990px) {
     .sliderow, .handbookrow {
-      padding: 50px 0 0 0; }
+      padding: 10px 0 0 0; }
       .sliderow .button, .handbookrow .button {
         padding: 20px;
         min-height: auto;
@@ -1819,9 +1819,6 @@ ul {
   @media screen and (max-width: 850px) {
     .sliderow h2.resource, .handbookrow h2.resource {
       font-size: 25px; } }
-  @media screen and (max-width: 600px) {
-    .sliderow, .handbookrow {
-      padding: 30px 0 0 0; } }
 
 /* index chapter grid */
 .sidecurls {
@@ -1843,35 +1840,9 @@ img.first {
 .second {
   float: left; }
 
-.introduction {
-  padding: 5px 10px 50px 10px;
-  margin: 0 auto;
-  width: 80%; }
-  .introduction img {
-    padding: 10px 0;
-    width: 100%;
-    margin: 0 auto; }
-  .introduction a h6 {
-    text-transform: uppercase;
-    color: #1B1E1F;
-    width: 100px;
-    font-size: 20px;
-    float: left;
-    padding: 0 120px 0 0; }
-    .introduction a h6:hover {
-      color: #cd1619;
-      text-decoration: none; }
-  .introduction a h6.download {
-    color: #cd1619; }
-    .introduction a h6.download:hover {
-      color: #1B1E1F; }
-
 .grid-item {
   height: 450px;
-  width: 30%;
-  float: left;
-  padding: 5px 10px 30px 10px;
-  margin: 0 10px; }
+  padding: 5px 10px 30px 10px; }
   .grid-item img {
     max-height: 400px;
     padding: 10px 0; }
@@ -1892,31 +1863,14 @@ img.first {
 
 @media screen and (max-width: 850px) {
   .grid-item {
-    max-height: 400px; }
+    max-height: 100%;
+    height: auto;
+    margin: 20px; }
     .grid-item img {
-      max-height: 360px; }
-
-  .grid-item a h6, .introduction a h6 {
-    font-size: 18px;
-    padding: 0 25px 0 0; } }
-@media screen and (max-width: 850px) and (orientation: landscape) {
-  .grid-item {
-    max-height: 320px; }
-    .grid-item img {
-      max-height: 300px; }
-
-  .grid-item a h6, .introduction a h6 {
-    font-size: 12px;
-    width: 40px;
-    padding: 0 25px 0 0; } }
+      max-height: 400px; } }
 @media screen and (max-width: 600px) and (orientation: portrait) {
-  .grid-item {
-    max-height: 200px; }
-
-  .grid-item a h6, .introduction a h6 {
-    font-size: 12px;
-    width: 40px;
-    padding: 0 25px 0 0; } }
+  .grid-item img {
+    max-height: 100%; } }
 /**
   ** Slides 
 
